# ai-visibility-checker

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py
app/routes/: defaults.py  pages.py  runs.py  sets.py  shared.py
app/services/: analyzer.py  content_extractor.py  crawler.py  event_bus.py  protections.py  proxy_pool.py  robots_parser.py
data/: set2_category_overrides.json
data/sets/: set1_manual_research.json  set2_corpus_sources.json  set3_ru_fmcg_consumer.json
scripts/: extract_set2.py
static/: index.html
static/brand/: BRAND_NOTES.md
tests/: test_frontend_static.py  test_pipeline_safety.py  test_proxy_pool.py  test_proxy_visibility.py
